
Some APIs have been removed in Play 1.2, after having been deprecated for a long time, but most of the public API is the same. If you have compilation errors that you don’t know how to solve, ask on the "Google group":https://groups.google.com/forum/#!forum/play-framework.

h2. Dependency management

"Play’s dependency management system":dependency allows you to express your application’s external dependencies in a single **dependencies.yml** file. 

A Play application can have three kinds of dependencies:

* The Play framework itself, since a Play application always depends on the Play framework.
* Any Java library, provided as **JAR** file installed in your application’s **lib/** directory.
* A Play module (in fact an application fragment) installed in your application’s **modules/** directory.

Once you have expressed these dependencies in your application’s **conf/dependencies.yml** file, Play will resolve, download and install all required dependencies.

For example, using this file:

bc. # Application dependencies
 
require:
    - play
    - com.google.guava -> guava r07
    - play -> pdf 0.2

You can run @`play dependencies`@:

!images/dependencies!

Under the hood it is powered by "Apache Ivy":http://ant.apache.org/ivy/, and it supports Maven compatible repositories.

h2. Better asynchronous features

It was already possible to achieve asynchronism with Play 1.1 using Java Future and @waitFor(…)@ and @suspend(…)@ controller methods. However these primitives were not really easy to use. That’s why we’ve worked on a complete set of new coherent features for Play 1.2.

h3. Promises
