@@ -199,7 +199,7 @@ mail.smtp=mock
 # ~~~~~
 #%test.module.cobertura=${play.path}/modules/cobertura
 %test.application.mode=dev
-%test.db=mem
-%test.jpa.ddl=create-drop
+%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+%test.jpa.ddl=create
 %test.mail.smtp=mock
 
