@@ -125,20 +125,14 @@ play.editor=txmt://open?url=file://%s&line=%s
 # Testing. Set up a custom configuration for test mode
 # ~~~~~
 %test.application.mode=dev
-%test.db=mem
-%test.jpa.ddl=create-drop
+%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+%test.jpa.ddl=create
 %test.mail.smtp=mock
 %test.play.pool=2
 
 # Date format for the application
 date.format=yyyy-MM-dd
 date.format.fr=dd-MM-yyyy
-
-# These features will be automatically enabled in the 1.1 release
-# For now you can enable them if you want
-# ~~~~~
-future.bindJPAObjects=true
-future.escapeInTemplates=true
 
 # For tests: defining a new mime type
 mimtype.foobar=application/foobarstuff
